Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5, 6.7, 6.8
-
None
-
-
6b440f5a0 (dev), 48e085156 (6.8), 109e817e4 (6.7), dd8504faa (tqtc/lts-6.5)
Description
The initial value of Tumbler's currentIndex is not correct.
Steps to Reproduce:
Run the following snippet example.
import QtQuick import QtQuick.Window import QtQuick.Controls ApplicationWindow { id: root width: 200 height: 300 visible: true Tumbler { id: hoursTumbler model: 6 currentIndex: 1 wrap: false } }
EXPECT:
The Tumbler current value should be 1 when the code is running.
ACTUAL:
The current is number 3 (not expected)
Attachments
Issue Links
- duplicates
-
QTBUG-66801 Tumbler: setting initial currentIndex selects wrong item with wrap disabled
-
- Closed
-
- split from
-
QTBUG-124921 Tumbler's currentIndex is not working when the model is changed at runtime
-
- Closed
-
For Gerrit Dashboard: QTBUG-127315 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
580448,3 | Tumbler: Prevent changing currentIndex when creating the view | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
581545,2 | Tumbler: Prevent changing currentIndex when creating the view | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
581786,3 | Tumbler: Prevent changing currentIndex when creating the view | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
582034,2 | Tumbler: Prevent changing currentIndex when creating the view | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |